tests/dataset/tpc-ds/compiler/cpp/q39.error
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:80:12: error: ‘w’ was not declared in this scope
   80 |   decltype(w.w_warehouse_sk) w;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:80:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:81:12: error: ‘i’ was not declared in this scope
   81 |   decltype(i.i_item_sk) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:81:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:82:12: error: ‘d’ was not declared in this scope
   82 |   decltype(d.d_moy) month;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:82:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:85:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   85 |   decltype(inv) inv;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:85:12: error: ‘inv’ was not declared in this scope; did you mean ‘int’?
   85 |   decltype(inv) inv;
      |            ^~~
      |            int
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:86:12: error: ‘d’ was not declared in this scope
   86 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:86:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:88:12: error: ‘w’ was not declared in this scope
   88 |   decltype(w) w;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:88:12: error: ‘w’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:110:12: error: ‘g’ was not declared in this scope
  110 |   decltype(g.w) w;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:110:12: error: ‘g’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:111:12: error: ‘g’ was not declared in this scope
  111 |   decltype(g.i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:111:12: error: ‘g’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:112:21: error: ‘g’ was not declared in this scope
  112 |   decltype(__append(g.qtys, std::declval<__struct5>().qty)) qtys;
      |                     ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:112:55: error: ‘struct __struct5’ has no member named ‘qty’
  112 |   decltype(__append(g.qtys, std::declval<__struct5>().qty)) qtys;
      |                                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:112:21: error: ‘g’ was not declared in this scope
  112 |   decltype(__append(g.qtys, std::declval<__struct5>().qty)) qtys;
      |                     ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:112:55: error: ‘struct __struct5’ has no member named ‘qty’
  112 |   decltype(__append(g.qtys, std::declval<__struct5>().qty)) qtys;
      |                                                       ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:123:12: error: ‘g’ was not declared in this scope
  123 |   decltype(g.w) w_warehouse_sk;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:123:12: error: ‘g’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:124:12: error: ‘g’ was not declared in this scope
  124 |   decltype(g.i) i_item_sk;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:124:12: error: ‘g’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:125:12: error: ‘cov’ was not declared in this scope; did you mean ‘cos’?
  125 |   decltype(cov) cov;
      |            ^~~
      |            cos
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:125:12: error: ‘cov’ was not declared in this scope; did you mean ‘cos’?
  125 |   decltype(cov) cov;
      |            ^~~
      |            cos
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:311:12: error: conversion from ‘vector<std::unordered_map<std::__cxx11::basic_string<char>, int>>’ to non-scalar type ‘vector<std::__cxx11::basic_string<char>>’ requested
  311 |       std::vector<decltype(std::unordered_map<std::string, decltype(1)>{
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  312 |           {std::string("i_item_sk"), 1}})>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  313 |           std::unordered_map<std::string, decltype(1)>{
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  314 |               {std::string("i_item_sk"), 1}}};
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:325:39: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘i_item_sk’
  325 |           if (!((inv.inv_item_sk == i.i_item_sk)))
      |                                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:332:54: error: ‘class std::__cxx11::basic_string<char>’ has no member named ‘i_item_sk’
  332 |             auto __key = Monthly{w.w_warehouse_sk, i.i_item_sk, d.d_moy};
      |                                                      ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:336:47: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  336 |                 __g.items.push_back(__struct5{inv, d, i, w});
      |                                               ^~~
      |                                               |
      |                                               Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:343:59: error: cannot convert ‘Inventory’ to ‘int’ in initialization
  343 |                   __key, std::vector<__struct5>{__struct5{inv, d, i, w}}});
      |                                                           ^~~
      |                                                           |
      |                                                           Inventory
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:343:72: error: no matching function for call to ‘std::vector<__struct5>::vector(<brace-enclosed initializer list>)’
  343 |                   __key, std::vector<__struct5>{__struct5{inv, d, i, w}}});
      |                                                                        ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:8:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; value_type = std::vector<__struct5>::value_type; allocator_type = std::allocator<__struct5>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; allocator_type = std::allocator<__struct5>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:356:52: error: ‘struct __struct5’ has no member named ‘inv_quantity_on_hand’
  356 |                 decltype(std::declval<__struct5>().inv_quantity_on_hand)>
      |                                                    ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:356:52: error: ‘struct __struct5’ has no member named ‘inv_quantity_on_hand’
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:356:73: error: template argument 1 is invalid
  356 |                 decltype(std::declval<__struct5>().inv_quantity_on_hand)>
      |                                                                         ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:356:73: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:359:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  359 |               __items.push_back(x.inv_quantity_on_hand);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:359:35: error: ‘struct __struct5’ has no member named ‘inv_quantity_on_hand’
  359 |               __items.push_back(x.inv_quantity_on_hand);
      |                                   ^~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:354:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:353:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  353 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:353:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  353 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:365:5: error: conversion from ‘vector<__struct7>’ to non-scalar type ‘vector<__struct5>’ requested
  318 |   std::vector<__struct5> monthly = ([&]() {
      |                                    ~~~~~~~~
  319 |     std::vector<__struct6> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  320 |     for (auto inv : inventory) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  321 |       for (auto d : date_dim) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~
  322 |         if (!((inv.inv_date_sk == d.d_date_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  323 |           continue;
      |           ~~~~~~~~~
  324 |         for (auto i : item) {
      |         ~~~~~~~~~~~~~~~~~~~~~
  325 |           if (!((inv.inv_item_sk == i.i_item_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  326 |             continue;
      |             ~~~~~~~~~
  327 |           for (auto w : warehouse) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~
  328 |             if (!((inv.inv_warehouse_sk == w.w_warehouse_sk)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  329 |               continue;
      |               ~~~~~~~~~
  330 |             if (!((d.d_year == 2000)))
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~
  331 |               continue;
      |               ~~~~~~~~~
  332 |             auto __key = Monthly{w.w_warehouse_sk, i.i_item_sk, d.d_moy};
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  333 |             bool __found = false;
      |             ~~~~~~~~~~~~~~~~~~~~~
  334 |             for (auto &__g : __groups) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  335 |               if (__g.key == __key) {
      |               ~~~~~~~~~~~~~~~~~~~~~~~
  336 |                 __g.items.push_back(__struct5{inv, d, i, w});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  337 |                 __found = true;
      |                 ~~~~~~~~~~~~~~~
  338 |                 break;
      |                 ~~~~~~
  339 |               }
      |               ~
  340 |             }
      |             ~
  341 |             if (!__found) {
      |             ~~~~~~~~~~~~~~~
  342 |               __groups.push_back(__struct6{
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  343 |                   __key, std::vector<__struct5>{__struct5{inv, d, i, w}}});
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  344 |             }
      |             ~
  345 |           }
      |           ~
  346 |         }
      |         ~
  347 |       }
      |       ~
  348 |     }
      |     ~
  349 |     std::vector<__struct7> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  350 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  351 |       __items.push_back(__struct7{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  352 |           g.key.w, g.key.i, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  353 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  354 |           })(([&]() {
      |           ~~~~~~~~~~~
  355 |             std::vector<
      |             ~~~~~~~~~~~~
  356 |                 decltype(std::declval<__struct5>().inv_quantity_on_hand)>
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  357 |                 __items;
      |                 ~~~~~~~~
  358 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  359 |               __items.push_back(x.inv_quantity_on_hand);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  360 |             }
      |             ~
  361 |             return __items;
      |             ~~~~~~~~~~~~~~~
  362 |           })())});
      |           ~~~~~~~~
  363 |     }
      |     ~
  364 |     return __items;
      |     ~~~~~~~~~~~~~~~
  365 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:368:30: error: no matching function for call to ‘to_string(Key)’
  368 |     auto key = std::to_string(Key{m.w, m.i});
      |                ~~~~~~~~~~~~~~^~~~~~~~~~~~~~~
In file included from /usr/include/c++/13/string:54,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:3:
/usr/include/c++/13/bits/basic_string.h:4162:3: note: candidate: ‘std::string std::__cxx11::to_string(int)’
 4162 |   to_string(int __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4162:17: note:   no known conversion for argument 1 from ‘Key’ to ‘int’
 4162 |   to_string(int __val)
      |             ~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4177:3: note: candidate: ‘std::string std::__cxx11::to_string(unsigned int)’
 4177 |   to_string(unsigned __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4177:22: note:   no known conversion for argument 1 from ‘Key’ to ‘unsigned int’
 4177 |   to_string(unsigned __val)
      |             ~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4189:3: note: candidate: ‘std::string std::__cxx11::to_string(long int)’
 4189 |   to_string(long __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4189:18: note:   no known conversion for argument 1 from ‘Key’ to ‘long int’
 4189 |   to_string(long __val)
      |             ~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4204:3: note: candidate: ‘std::string std::__cxx11::to_string(long unsigned int)’
 4204 |   to_string(unsigned long __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4204:27: note:   no known conversion for argument 1 from ‘Key’ to ‘long unsigned int’
 4204 |   to_string(unsigned long __val)
      |             ~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4216:3: note: candidate: ‘std::string std::__cxx11::to_string(long long int)’
 4216 |   to_string(long long __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4216:23: note:   no known conversion for argument 1 from ‘Key’ to ‘long long int’
 4216 |   to_string(long long __val)
      |             ~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4229:3: note: candidate: ‘std::string std::__cxx11::to_string(long long unsigned int)’
 4229 |   to_string(unsigned long long __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4229:32: note:   no known conversion for argument 1 from ‘Key’ to ‘long long unsigned int’
 4229 |   to_string(unsigned long long __val)
      |             ~~~~~~~~~~~~~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4241:3: note: candidate: ‘std::string std::__cxx11::to_string(float)’
 4241 |   to_string(float __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4241:19: note:   no known conversion for argument 1 from ‘Key’ to ‘float’
 4241 |   to_string(float __val)
      |             ~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4251:3: note: candidate: ‘std::string std::__cxx11::to_string(double)’
 4251 |   to_string(double __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4251:20: note:   no known conversion for argument 1 from ‘Key’ to ‘double’
 4251 |   to_string(double __val)
      |             ~~~~~~~^~~~~
/usr/include/c++/13/bits/basic_string.h:4261:3: note: candidate: ‘std::string std::__cxx11::to_string(long double)’
 4261 |   to_string(long double __val)
      |   ^~~~~~~~~
/usr/include/c++/13/bits/basic_string.h:4261:25: note:   no known conversion for argument 1 from ‘Key’ to ‘long double’
 4261 |   to_string(long double __val)
      |             ~~~~~~~~~~~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:371:61: error: ‘struct __struct5’ has no member named ‘qty’
  371 |       grouped[key] = __struct9{g.w, g.i, __append(g.qtys, m.qty)};
      |                                                             ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:373:65: error: ‘struct __struct5’ has no member named ‘qty’
  373 |       grouped[key] = __struct9{m.w, m.i, std::vector<decltype(m.qty)>{m.qty}};
      |                                                                 ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:373:65: error: ‘struct __struct5’ has no member named ‘qty’
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:373:69: error: template argument 1 is invalid
  373 |       grouped[key] = __struct9{m.w, m.i, std::vector<decltype(m.qty)>{m.qty}};
      |                                                                     ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:373:69: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:373:73: error: ‘struct __struct5’ has no member named ‘qty’
  373 |       grouped[key] = __struct9{m.w, m.i, std::vector<decltype(m.qty)>{m.qty}};
      |                                                                         ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:383:25: error: request for member ‘qtys’ in ‘g’, which is of non-class type ‘int’
  383 |     auto mean = __avg(g.qtys);
      |                         ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:385:21: error: request for member ‘qtys’ in ‘g’, which is of non-class type ‘int’
  385 |     for (auto q : g.qtys) {
      |                     ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:388:34: error: request for member ‘qtys’ in ‘g’, which is of non-class type ‘int’
  388 |     auto variance = (sumsq / ((g.qtys.size() - 1)));
      |                                  ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:391:38: error: request for member ‘w’ in ‘g’, which is of non-class type ‘int’
  391 |       summary.push_back(__struct10{g.w, g.i, cov});
      |                                      ^
/tmp/TestCPPCompiler_TPCDSQueriesq392741454324/001/prog.cpp:391:43: error: request for member ‘i’ in ‘g’, which is of non-class type ‘int’
  391 |       summary.push_back(__struct10{g.w, g.i, cov});
      |                                           ^
